syntax = "proto3";

package boxuserclient;

option go_package="./boxuser";

enum UserRole {
    Owner = 0;
    Administrator = 1;
    Member = 2;
}

// AddUser
message AddOwnerRequest {
    int64 Uid = 1;
    int64 Bid = 2;
}
message AddOwnerResponse {
}

// IsOwner
message IsOwnerRequest {
    int64 Uid = 1;
    int64 Bid = 2;
}
message IsOwnerResponse {
    bool Exists = 1;
}

service BoxUser {
    rpc AddOwner(AddOwnerRequest) returns (AddOwnerRequest);
    rpc AddOwnerRevert(AddOwnerRequest) returns (AddOwnerRequest);
    rpc IsOwner(IsOwnerRequest) returns (IsOwnerResponse);
}